--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Newcomer a Corporate Business Category Bootstrap Responsive website Template | Home :: w3layouts</title>
+<title>Afantor a Corporate Business Category Bootstrap Responsive website Template | Home :: w3layouts</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Newcomer Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
+<meta name="keywords" content="Afantor Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
 	SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony Ericsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- Custom Theme files -->
@@ -101,12 +101,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="container">
 					<div class="navbar-header page-scroll">
 						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-							<span class="sr-only">Newcomer</span>
+							<span class="sr-only">Afantor</span>
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<h1><a class="navbar-brand" href="index.html"><span>N</span>ewcomer</a></h1>
+						<h1><a class="navbar-brand" href="index.html"><span>A</span>fantor</a></h1>
 					</div> 
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -484,7 +484,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="carouselGallery-item">
 							<div class="carouselGallery-item-meta">
 								<span class="carouselGallery-item-meta-user">
-								Newcomer
+								Afantor
 								</span>
 							</div>
 						</div>
@@ -498,7 +498,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="carouselGallery-item">
 							<div class="carouselGallery-item-meta">
 								<span class="carouselGallery-item-meta-user">
-								Newcomer
+								Afantor
 								</span>
 							</div>
 						</div>
@@ -513,7 +513,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="carouselGallery-item">
 							<div class="carouselGallery-item-meta">
 								<span class="carouselGallery-item-meta-user">
-								Newcomer
+								Afantor
 								</span>
 							</div>
 						</div>
@@ -528,7 +528,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="carouselGallery-item">
 							<div class="carouselGallery-item-meta">
 								<span class="carouselGallery-item-meta-user">
-								Newcomer
+								Afantor
 								</span>
 							</div>
 						</div>
@@ -542,7 +542,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="carouselGallery-item">
 							<div class="carouselGallery-item-meta">
 								<span class="carouselGallery-item-meta-user">
-								Newcomer
+								Afantor
 								</span>
 							</div>
 						</div>
@@ -556,7 +556,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="carouselGallery-item">
 							<div class="carouselGallery-item-meta">
 								<span class="carouselGallery-item-meta-user">
-								Newcomer
+								Afantor
 								</span>
 							</div>
 						</div>
@@ -746,7 +746,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 <!-- footer -->
 			<div class="copy-right">
-				<p>&copy; 2017 Newcomer. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+				<p>&copy; 2018 Afantor. All rights reserved | Design by <a href="http://afantor.com/">afantor</a></p>
 			</div>
 			
 <!-- //footer -->
