--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Afantor a Corporate Business Category Bootstrap Responsive website Template | Home :: w3layouts</title>
+<title>Afantor :: Construct everything you want.</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Afantor Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -120,6 +120,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<li><a class="page-scroll scroll" href="#plans">Plans</a></li>
 							<li><a class="page-scroll scroll" href="#gallery">Projects</a></li>
 							<li><a class="page-scroll scroll" href="#contact">Contact</a></li>
+                            <li><a class="page-scroll scroll" href="#contact">Language</a></li>
 						</ul>
 					</div>
 					<!-- /.navbar-collapse -->
@@ -635,7 +636,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="con-bot">
 			<div class="left-bw3">
 				<h5><i class="fa fa-map-marker" aria-hidden="true"></i>Address</h5>
-				<p>New York 3000</p>
+				<p>Shen Zhen City</p>
 				<p>40019 Honey Street,</p>
 				<p>Morocco Casablanca</p>
 			</div>
@@ -649,7 +650,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 			<div class="cont-top">
 			<h5><i class="fa fa-envelope-o" aria-hidden="true"></i>Email</h5>
-			<a href="mailto:info@example.com">info@example.com</a>
+			<a href="mailto:info@example.com">13148946269@163.com</a>
 		</div>
 	</div>
 	<div class="clearfix"></div>
@@ -746,7 +747,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 <!-- footer -->
 			<div class="copy-right">
-				<p>&copy; 2018 Afantor. All rights reserved | Design by <a href="http://afantor.com/">afantor</a></p>
+				<p>&copy; 2017-2018 Afantor. All rights reserved | Design by <a href="http://afantor.com/">Afantor</a></p>
 			</div>
 			
 <!-- //footer -->
