--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </div>
                 </div>
     </section><!--/#main-slider-->
-
+<!--
     <section id="features">
         <div class="container">
             <div class="section-header">
@@ -98,8 +98,9 @@
                             <p>Fusce non fermentum mi. Praesent vel lobortis elit. Nulla sodales, risus quis sollicitudin iaculis, felis dolor aliquet purus, eget elementum velit nunc eu dolor.</p>
                         </div>
                     </div>
-</div>
-<div class="col-md-6">
+			</div>
+
+		<div class="col-md-6">
                     <div class="media service-box wow fadeInRight">
                         <div class="pull-left">
                             <i class="fa fa-line-chart"></i>
@@ -123,17 +124,18 @@
             </div>
         </div>
     </section>
+-->
 
-    <section id="product">
+    <section id="portfolio">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title text-center wow fadeInDown">Products</h2>
+                <h2 class="section-title text-center wow fadeInDown">Awesome Projects</h2>
                 <p class="text-center wow fadeInDown">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget risus vitae massa <br> semper aliquam quis mattis quam.</p>
             </div>
 
             <div class="text-center">
                 <ul class="portfolio-filter">
-                    <li><a class="active" href="#" data-filter="*">All Products</a></li>
+                    <li><a class="active" href="#" data-filter="*">All Projects</a></li>
                     <li><a href="#" data-filter=".designing">Designing</a></li>
                     <li><a href="#" data-filter=".mobile">Mobile App</a></li>
                     <li><a href="#" data-filter=".development">Development</a></li>
@@ -225,6 +227,70 @@
                             <h3>Project Name</h3>
                              Some description..
                             <a class="preview" href="images/portfolio/08.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div><!--/.portfolio-item-->
+            </div>
+        </div><!--/.container-->
+    </section><!--/#portfolio-->
+    
+    <section id="product">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title text-center wow fadeInDown">Products</h2>
+                <p class="text-center wow fadeInDown">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget risus vitae massa <br> semper aliquam quis mattis quam.</p>
+            </div>
+
+            <div class="text-center">
+                <ul class="portfolio-filter">
+                    <li><a class="active" href="#" data-filter="*">All Products</a></li>
+                    <li><a href="#" data-filter=".designing">Designing</a></li>
+                    <li><a href="#" data-filter=".mobile">Mobile App</a></li>
+                    <li><a href="#" data-filter=".development">Development</a></li>
+                </ul><!--/#portfolio-filter-->
+            </div>
+
+            <div class="portfolio-items">
+                <div class="portfolio-item designing">
+                    <div class="portfolio-item-inner">
+                        <img class="img-responsive" src="images/portfolio/01.jpg" alt="">
+                        <div class="portfolio-info">
+                            <h3>Project Name</h3>
+                            Some description..
+                            <a class="preview" href="images/portfolio/01.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div><!--/.portfolio-item-->
+
+                <div class="portfolio-item mobile development">
+                    <div class="portfolio-item-inner">
+                        <img class="img-responsive" src="images/portfolio/02.jpg" alt="">
+                        <div class="portfolio-info">
+                            <h3>Project Name</h3>
+                             Some description..
+                            <a class="preview" href="images/portfolio/02.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div><!--/.portfolio-item-->
+
+                <div class="portfolio-item designing">
+                    <div class="portfolio-item-inner">
+                        <img class="img-responsive" src="images/portfolio/03.jpg" alt="">
+                        <div class="portfolio-info">
+                            <h3>Project Name</h3>
+                             Some description..
+                            <a class="preview" href="images/portfolio/03.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div><!--/.portfolio-item-->
+
+                <div class="portfolio-item mobile">
+                    <div class="portfolio-item-inner">
+                        <img class="img-responsive" src="images/portfolio/04.jpg" alt="">
+                        <div class="portfolio-info">
+                            <h3>Project Name</h3>
+                            Some description..
+                            <a class="preview" href="images/portfolio/04.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
                         </div>
                     </div>
                 </div><!--/.portfolio-item-->
@@ -896,13 +962,13 @@
                 </div>
             </div>
         </div>
-    </section><!--/#about-->
+    </section><!--/#about--> 
 	
     <section id="contact-us">
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title text-center wow fadeInDown">Contact Us</h2>
-                <p class="text-center wow fadeInDown">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget risus vitae massa <br> semper aliquam quis mattis quam.</p>
+                <p class="text-center wow fadeInDown">Our products have dealers and agents all over the world, <br>such as the famous Amazon, Adafruit and DFRobot.</p>
             </div>
         </div>
     </section><!--/#contact-us-->
@@ -918,16 +984,18 @@
                             <h3>Contact Info</h3>
 
                             <address>
-                              <strong>Amazing Company, Inc.</strong><br>
-                              12345 NewYork, Street 125<br>
-                              United States 94107<br>
-                              <abbr title="Phone">P:</abbr> (123) 456-7890
+                              <strong>Afantor Company, Inc.</strong><br>
+                              Shenzhen, Guangdong Province, China<br>
+                              No.1006 Xueyuan Avenue, Nanshan District<br>
+                              <abbr title="Phone">Tel:</abbr> (+86) 13148946269
+                              <abbr title="Email">Email:</abbr> 13148946269@163.com
+                              <abbr title="QQ">QQ:</abbr> 632192692
                             </address>
 					</div></div>
                     <div class="col-sm-8 col-md-8">
                         <div class="contact-form">
                        
-                            <form id="main-contact-form" name="contact-form" method="post" action="#">
+                            <form id="main-contact-form" name="contact-form" method="post" action="mailto:13148946269@163.com">
                                 <div class="form-group">
                                     <input type="text" name="name" class="form-control" placeholder="Name" required>
                                 </div>
@@ -952,7 +1020,7 @@
     <footer id="footer">
         <div class="container">
             <div class="row">
-                <div class="col-sm-6">Copyright &copy; 2018.Company name All rights reserved.More messages <a href="http://www.afantor.cc/" target="_blank" title="Afantor">Afantor</a></div>
+                <div class="col-sm-6">Copyright &copy; 2016-2018.Afantor Co., Ltd. More messages visit to <a href="http://www.afantor.cc/" target="_blank" title="Afantor">Afantor</a></div>
                 <div class="col-sm-6">
                     <ul class="social-icons">
                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
