--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </section>
 -->
 
-    <section id="portfolio">
+    <section id="emodule">
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title text-center wow fadeInDown">Awesome Projects</h2>
@@ -233,7 +233,7 @@
             </div>
         </div><!--/.container-->
     </section><!--/#portfolio-->
-    
+
     <section id="product">
         <div class="container">
             <div class="section-header">
@@ -984,12 +984,12 @@
                             <h3>Contact Info</h3>
 
                             <address>
-                              <strong>Afantor Company, Inc.</strong><br>
+                              <strong>Afantor Technology Co., Ltd.</strong><br>
                               Shenzhen, Guangdong Province, China<br>
                               No.1006 Xueyuan Avenue, Nanshan District<br>
-                              <abbr title="Phone">Tel:</abbr> (+86) 13148946269
-                              <abbr title="Email">Email:</abbr> 13148946269@163.com
-                              <abbr title="QQ">QQ:</abbr> 632192692
+                              <abbr title="Phone">Tel:</abbr> (+86) 13148946269<br>
+                              <abbr title="Email">Email:</abbr> 13148946269@163.com<br>
+                              <abbr title="QQ">QQ:</abbr> 632192692<br>
                             </address>
 					</div></div>
                     <div class="col-sm-8 col-md-8">
@@ -1000,7 +1000,7 @@
                                     <input type="text" name="name" class="form-control" placeholder="Name" required>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" name="email" class="form-control" placeholder="Email" required>
+                                    <input type="email" name="email" class="form-control" placeholder="Your Email" required>
                                 </div>
                                 <div class="form-group">
                                     <input type="text" name="subject" class="form-control" placeholder="Subject" required>
