--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </section>
 -->
 
-    <section id="emodule">
+    <section id="portfolio">
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title text-center wow fadeInDown">Awesome Projects</h2>
