fixed utf-8 for chinese.

--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+<meta charset="UTF-8">
 <meta charset="gbk">
 <title>关于我_杨青个人博客 - 一个站在web前端设计之路的女技术员个人博客网站</title>
 <meta name="keywords" content="个人博客,杨青个人博客,个人博客模板,杨青" />
