fixed some tip.

--- a/list.html
+++ b/list.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="UTF-8">  
+<meta charset="UTF-8">
 <meta charset="gbk">
-<title>博客日记_杨青个人博客 - 一个站在web前端设计之路的女技术员个人博客网站</title>
-<meta name="keywords" content="个人博客,杨青个人博客,个人博客模板,杨青" />
-<meta name="description" content="杨青个人博客，是一个站在web前端设计之路的女程序员个人网站，提供个人博客模板免费资源下载的个人原创网站。" />
+<title>Afantor::Awesome DIY Project</title>
+<meta name="keywords" content="Afantor,ESP32,ESP8266,MicroPython,nRF52832,Bluetooth,Bluefruit" />
+<meta name="description" content="Afantor个人技术博客，是一个记录开源硬件开发设计和学习笔记的博文站点。" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
@@ -21,7 +21,7 @@
 <header id="header">
   <div class="navbar">
     <div class="topbox">
-      <p class="welcome">列表模板，经典的图片和文字布局。每一行间距以及图片大小，都是经过认真反复的测试再合理布局。</p>
+      <p class="welcome">欢迎您访问Afantor博客，这里不仅仅是记录个人的平台，更是一个记录世界、时代的平台！让我们一起学习开源硬件！</p>
       <div class="searchbox">
         <div id="search_bar" class="search_bar">
           <form  id="searchform" action="[!--news.url--]e/search/index.php" method="post" name="searchform">
@@ -38,28 +38,33 @@
   </div>
   <div class="header-navigation">
     <nav>
-      <div class="logo"><a href="http://www.yangqq.com">杨青个人博客</a></div>
+      <div class="logo"><a href="http://www.afantor.cc">Afantor博文站点</a></div>
       <h2 id="mnavh"><span class="navicon"></span></h2>
       <ul id="starlist">
-        <li><a href="index.html">网站首页</a></li>
-        <li><a href="about.html">关于我</a></li>
-        <li><a href="share.html">模板分享</a></li>
-        <li><a href="list.html">博客日记</a></li>
+        <li><a href="index.html">首页</a></li>
+        <li><a href="share.html">项目分享</a></li>
+        <li><a href="list.html">博文日记</a></li>
         <li class="menu"><a href="fengmian.html">学无止境</a>
           <ul class="sub">
-            <li><a href="#">慢生活</a></li>
+            <li><a href="#">最新资讯</a></li>
             <li><a href="#">美文欣赏</a></li>
           </ul>
         </li>
-        <li><a href="info.html">慢生活</a></li>
+        <li class="menu"><a href="info.html">慢生活</a>
+		  <ul class="sub">
+            <li><a href="#">一起旅游</a></li>
+            <li><a href="#">摄像美图</a></li>
+          </ul>
+		</li>  
         <li><a href="time.html">时间轴</a></li>
+		<li><a href="about.html">关于我</a></li>
       </ul>
     </nav>
   </div>
 </header>
 <div class="wrapper">
   <main>
-     <h2 class="place">您现在的位置是：网站首页&gt; <a href="/">模板分享</a></h2>
+     <h2 class="place">您现在的位置是：首页&gt; <a href="/">博文日记</a></h2>
 
     <div class="bloglist">
       <ul>
@@ -168,7 +173,7 @@
     <div class="fenlei">
       <ul class="flnav">
         <li class="flselect"><a href="#" title="最新文章" class="pall"></a></li>
-        <li><a href="#" title="站长推荐" class="pgood"></a></li>
+        <li><a href="#" title="友情推荐" class="pgood"></a></li>
         <li><a href="#" title="点击排行" class="pbro"></a></li>
         <li><a href="#" title="头条关注" class="pfav"></a></li>
       </ul>
@@ -193,7 +198,7 @@
           <span>2018-05-13</span> </li>
       </ul>
       <ul class="sidenews">
-        <h2>站长推荐</h2>
+        <h2>友情推荐</h2>
         <li> <i><img src="images/6.jpg"></i>
           <p><a href="/">别让这些闹心的套路，毁了你的网页设计</a></p>
           <span>2018-05-13</span> </li>
@@ -252,23 +257,23 @@
       <h2 class="hometitle">关于本站</h2>
       <ul>
         <div class="avatar"> <img src="images/tx.png" alt=""> </div>
-        <p class="abname">dancesmile | 杨青</p>
-        <p class="abtext"> 一个80后草根女站长！09年入行。一直潜心研究web前端技术，一边工作一边积累经验，分享一些个人博客模板，以及SEO优化等心得。 </p>
+        <p class="abname">Afantor | Mike</p>
+        <p class="abtext"> 一个93后草根Maker！16年毕业。一直从事开发开源硬件，一边工作一边积累经验，分享一些个人DIY的笔记，以及一些生活记录。 </p>
         <li><a class="xlwb" href="#" target="_blank"></a></li>
         <li><a class="txqq" href="" target="_blank"></a></li>
         <li><a class="rss" href="" target="_blank"></a></li>
-        <li class="wxpic"><a class="wx" href=""></a><img src="images/grwx.png"></li>
+        <li class="wxpic"><a class="wx" href=""></a><img src="images/6.jpg"></li>
       </ul>
     </div>
     <div class="tjlm">
       <h2 class="hometitle">推荐栏目</h2>
       <ul>
-        <li><a href="about.html">关于我</a></li>
-        <li><a href="share.html">模板分享</a></li>
-        <li><a href="list.html">博客日记</a></li>
+        <li><a href="share.html">项目分享</a></li>
+        <li><a href="list.html">博文日记</a></li>
+		<li><a href="#">美文欣赏</a></li>
+		<li><a href="#">一起旅行</a></li>
         <li><a href="info.html">慢生活</a></li>
-        <li><a href="time.html">时间轴</a></li>
-        <li><a href="#">美文欣赏</a></li>
+		<li><a href="about.html">关于我</a></li>
       </ul>
     </div>
     <div class="tpjx">
@@ -282,6 +287,15 @@
         <li><a href="#"><i><img src="images/6.jpg"></i><span>个人博客，属于我的小世界！</span></a></li>
       </ul>
     </div>
+    <div class="links">
+      <h2 class="hometitle">友情链接</h2>
+      <ul>
+        <li><a href="https://blog.csdn.net/solar_Lan">个人CSDN博客</a></li>
+        <li><a href="http://micropython.org/">MicroPython论坛</a></li>
+        <li><a href="http://www.callmecode.com/">酷米客科技</a></li>
+        <li><a href="http://warksjammy.blogspot.com/">Jammy blog</a></li>
+      </ul>
+    </div>
     <div class="ad"> <img src="images/8.jpg"> </div>
   </aside>
   <!--sidebar end--> 
@@ -291,19 +305,20 @@
   <div class="footer">
     <div class="wxbox">
       <ul>
-        <li><img src="images/grwx.png"><span>我的微信</span></li>
-        <li><img src="images/wx.jpg"><span>微信公众号</span></li>
+        <li><img src="images/ESP32qq1.png"><span>ESP32交流群</span></li>
+        <li><img src="images/nRF52_Bluefruitqq.png"><span>nRF52交流群</span></li>
+		<li><img src="images/taobao.png"><span>个人淘宝</span></li>
       </ul>
     </div>
     <div class="bzjj">
       <h2>本站简介</h2>
-      <p>杨青个人博客，是一个站在web前端设计之路的女程序员个人网站，提供个人博客模板免费资源下载的个人原创网站。</p>
+      <p>Afantor个人技术博客，是一个记录开源硬件开发设计和学习笔记的博文站点。</p>
     </div>
     <div class="other">
-      <h2>网站版权</h2>
-      <p>未经授权禁止转载、摘编、复制或建立镜像，如有违反，追究法律责任。举报邮箱：476847113@qq.com</p>
+      <h2>站点版权</h2>
+      <p>未经授权禁止转载、摘编、复制或建立镜像，如有违反，追究法律责任。</p>
       <p>&nbsp;</p>
-      <p>备案号：蜀ICP备11002373号-1</p>
+      <p>举报邮箱：632192692@qq.com</p>
     </div>
   </div>
 </footer>
