--- a/time.html
+++ b/time.html
@@ -1,16 +1,17 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="UTF-8">  
+<meta charset="UTF-8">
 <meta charset="gbk">
-<title>时间轴_杨青个人博客 - 一个站在web前端设计之路的女技术员个人博客网站</title>
-<meta name="keywords" content="个人博客,杨青个人博客,个人博客模板,杨青" />
-<meta name="description" content="杨青个人博客，是一个站在web前端设计之路的女程序员个人网站，提供个人博客模板免费资源下载的个人原创网站。" />
+<title>Afantor::Awesome DIY Project</title>
+<meta name="keywords" content="Afantor,ESP32,ESP8266,MicroPython,nRF52832,Bluetooth,Bluefruit" />
+<meta name="description" content="Afantor个人技术博客，是一个记录开源硬件开发设计和学习笔记的博文站点。" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
 <link href="css/m.css" rel="stylesheet">
 <script src="js/jquery.min.js" ></script>
+<script src="js/hc-sticky.js"></script>
 <script src="js/comm.js"></script>
 <!--[if lt IE 9]>
 <script src="js/modernizr.js"></script>
@@ -20,7 +21,7 @@
 <header id="header">
   <div class="navbar">
     <div class="topbox">
-      <p class="welcome">时间悄然流逝，写一个时间轴这样的网站，可以记录我们所有的文章，方便我们查找和统计！</p>
+      <p class="welcome">欢迎您访问Afantor博客，这里不仅仅是记录个人的平台，更是一个记录世界、时代的平台！让我们一起学习开源硬件！</p>
       <div class="searchbox">
         <div id="search_bar" class="search_bar">
           <form  id="searchform" action="[!--news.url--]e/search/index.php" method="post" name="searchform">
@@ -37,28 +38,33 @@
   </div>
   <div class="header-navigation">
     <nav>
-      <div class="logo"><a href="http://www.yangqq.com">杨青个人博客</a></div>
+      <div class="logo"><a href="http://www.afantor.cc">Afantor博文站点</a></div>
       <h2 id="mnavh"><span class="navicon"></span></h2>
       <ul id="starlist">
-        <li><a href="index.html">网站首页</a></li>
-        <li><a href="about.html">关于我</a></li>
-        <li><a href="share.html">模板分享</a></li>
-        <li><a href="list.html">博客日记</a></li>
+        <li><a href="index.html">首页</a></li>
+        <li><a href="share.html">项目分享</a></li>
+        <li><a href="list.html">博文日记</a></li>
         <li class="menu"><a href="fengmian.html">学无止境</a>
           <ul class="sub">
-            <li><a href="#">慢生活</a></li>
+            <li><a href="#">最新资讯</a></li>
             <li><a href="#">美文欣赏</a></li>
           </ul>
         </li>
-        <li><a href="info.html">慢生活</a></li>
+        <li class="menu"><a href="info.html">慢生活</a>
+		  <ul class="sub">
+            <li><a href="#">一起旅游</a></li>
+            <li><a href="#">摄像美图</a></li>
+          </ul>
+		</li>  
         <li><a href="time.html">时间轴</a></li>
+		<li><a href="about.html">关于我</a></li>
       </ul>
     </nav>
   </div>
 </header>
 <div class="wrapper">
   <main>
-    <h2 class="place">您现在的位置是：网站首页&gt; <a href="/">内容页</a></h2>
+    <h2 class="place">您现在的位置是：首页&gt; <a href="/">时间轴</a></h2>
     <div class="timebox">
       <ul>
         <li><span>2018-06-17</span><i><a href="/" target="_blank">安静地做一个爱设计的女子</a></i></li>
@@ -81,19 +87,18 @@
         <li><span>2018-06-18</span><i><a href="/" target="_blank">html5古典个人博客模板《青砖屋檐》</a></i></li>
       </ul>
     </div>
-    <div class="pagelist"><a title="Total record">&nbsp;<b>160</b> </a>&nbsp;&nbsp;&nbsp;<b>1</b>&nbsp;<a href="/jstt/index_2.html">2</a>&nbsp;<a href="/jstt/index_3.html">3</a>&nbsp;<a href="/jstt/index_4.html">4</a>&nbsp;<a href="/jstt/index_5.html">5</a>&nbsp;<a href="/jstt/index_6.html">6</a>&nbsp;<a href="/jstt/index_2.html">下一页</a>&nbsp;<a href="/jstt/index_14.html">尾页</a></div>
   </main>
   <aside class="sidebar">
     <div class="about">
       <h2 class="hometitle">关于本站</h2>
       <ul>
         <div class="avatar"> <img src="images/tx.png" alt=""> </div>
-        <p class="abname">dancesmile | 杨青</p>
-        <p class="abtext"> 一个80后草根女站长！09年入行。一直潜心研究web前端技术，一边工作一边积累经验，分享一些个人博客模板，以及SEO优化等心得。 </p>
+        <p class="abname">Afantor | Mike</p>
+        <p class="abtext"> 一个93后草根Maker！16年毕业。一直从事开发开源硬件，一边工作一边积累经验，分享一些个人DIY的笔记，以及一些生活记录。 </p>
         <li><a class="xlwb" href="#" target="_blank"></a></li>
         <li><a class="txqq" href="" target="_blank"></a></li>
         <li><a class="rss" href="" target="_blank"></a></li>
-        <li class="wxpic"><a class="wx" href=""></a><img src="images/grwx.png"></li>
+        <li class="wxpic"><a class="wx" href=""></a><img src="images/6.jpg"></li>
       </ul>
     </div>
 
@@ -115,19 +120,20 @@
   <div class="footer">
     <div class="wxbox">
       <ul>
-        <li><img src="images/grwx.png"><span>我的微信</span></li>
-        <li><img src="images/wx.jpg"><span>微信公众号</span></li>
+        <li><img src="images/ESP32qq1.png"><span>ESP32交流群</span></li>
+        <li><img src="images/nRF52_Bluefruitqq.png"><span>nRF52交流群</span></li>
+		<li><img src="images/taobao.png"><span>个人淘宝</span></li>
       </ul>
     </div>
     <div class="bzjj">
       <h2>本站简介</h2>
-      <p>杨青个人博客，是一个站在web前端设计之路的女程序员个人网站，提供个人博客模板免费资源下载的个人原创网站。</p>
+      <p>Afantor个人技术博客，是一个记录开源硬件开发设计和学习笔记的博文站点。</p>
     </div>
     <div class="other">
-      <h2>网站版权</h2>
-      <p>未经授权禁止转载、摘编、复制或建立镜像，如有违反，追究法律责任。举报邮箱：476847113@qq.com</p>
+      <h2>站点版权</h2>
+      <p>未经授权禁止转载、摘编、复制或建立镜像，如有违反，追究法律责任。</p>
       <p>&nbsp;</p>
-      <p>备案号：蜀ICP备11002373号-1</p>
+      <p>举报邮箱：632192692@qq.com</p>
     </div>
   </div>
 </footer>
