--- a/about.html
+++ b/about.html
@@ -43,17 +43,23 @@
       <ul id="starlist">
         <li><a href="index.html">首页</a></li>
         <li><a href="share.html">项目分享</a></li>
-        <li><a href="list.html">博文日记</a></li>
+        <li class="menu"><a href="list.html">博文日记</a>
+          <ul class="sub">
+            <li><a href="esp32learn.html">ESP32开发</a></li>
+            <li><a href="esp8266learn.html">ESP8266</a></li>
+			<li><a href="nrf52learn.html">nRF52832</a></li>
+          </ul>		
+		</li>
         <li class="menu"><a href="fengmian.html">学无止境</a>
           <ul class="sub">
-            <li><a href="#">最新资讯</a></li>
-            <li><a href="#">美文欣赏</a></li>
+            <li><a href="news.html">最新资讯</a></li>
+            <li><a href="essay.html">美文欣赏</a></li>
           </ul>
         </li>
         <li class="menu"><a href="info.html">慢生活</a>
 		  <ul class="sub">
-            <li><a href="#">一起旅游</a></li>
-            <li><a href="#">摄像美图</a></li>
+            <li><a href="travel.html">一起旅行</a></li>
+            <li><a href="picture.html">摄像美图</a></li>
           </ul>
 		</li>  
         <li><a href="time.html">时间轴</a></li>
@@ -61,11 +67,11 @@
       </ul>
     </nav>
   </div>
-</header>
+</header>市
 <div class="wrapper">
   <main>
     <div class="aboutbox">
-      <h2 class="place">您现在的位置是：网站首页> <a href="/">关于我</a></h2>
+      <h2 class="place">您现在的位置是：首页 &gt; <a href="about.html">关于我</a></h2>
       <div class="abinfos">
         <h3>关于我</h3>
         <p>Mike.Lan, 一个93后草根Maker！16年毕业。一直从事开发开源硬件，一边工作一边积累经验，分享一些个人DIY的笔记，以及一些生活记录。</p>
@@ -101,8 +107,8 @@
       <ul>
         <li><a href="share.html">项目分享</a></li>
         <li><a href="list.html">博文日记</a></li>
-		<li><a href="#">美文欣赏</a></li>
-		<li><a href="#">一起旅行</a></li>
+		<li><a href="essay.html">美文欣赏</a></li>
+		<li><a href="travel.html">一起旅行</a></li>
         <li><a href="info.html">慢生活</a></li>
 		<li><a href="about.html">关于我</a></li>
       </ul>
