--- a/index.html
+++ b/index.html
@@ -43,17 +43,23 @@
       <ul id="starlist">
         <li><a href="index.html">首页</a></li>
         <li><a href="share.html">项目分享</a></li>
-        <li><a href="list.html">博文日记</a></li>
+        <li class="menu"><a href="list.html">博文日记</a>
+          <ul class="sub">
+            <li><a href="esp32learn.html">ESP32开发</a></li>
+            <li><a href="esp8266learn.html">ESP8266</a></li>
+			<li><a href="nrf52learn.html">nRF52832</a></li>
+          </ul>		
+		</li>
         <li class="menu"><a href="fengmian.html">学无止境</a>
           <ul class="sub">
-            <li><a href="#">最新资讯</a></li>
-            <li><a href="#">美文欣赏</a></li>
+            <li><a href="news.html">最新资讯</a></li>
+            <li><a href="essay.html">美文欣赏</a></li>
           </ul>
         </li>
         <li class="menu"><a href="info.html">慢生活</a>
 		  <ul class="sub">
-            <li><a href="#">一起旅游</a></li>
-            <li><a href="#">摄像美图</a></li>
+            <li><a href="travel.html">一起旅行</a></li>
+            <li><a href="picture.html">摄像美图</a></li>
           </ul>
 		</li>  
         <li><a href="time.html">时间轴</a></li>
@@ -69,6 +75,7 @@
       <div id="banner" class="fader">
         <li class="slide" ><a href="/news/life/2018-06-17/873.html" title="D设计师博客-一个热爱生活的设计师" target="_blank"><img src="images/1.jpg"><span class="imginfo">D设计师博客-一个热爱生活的设计师</span></a></li>
         <li class="slide" ><a href="/news/life/2018-04-27/816.html" title="个人博客，属于我的小世界！" target="_blank"><img src="images/2.jpg"><span class="imginfo">个人博客，属于我的小世界！</span></a></li>
+		<li class="slide" ><a href="/news/life/2018-04-27/816.html" title="Afantor博客，属于我的小世界！" target="_blank"><img src="images/3.jpg"><span class="imginfo">Afantor博客，属于我的小世界！</span></a></li>
         <div class="fader_controls">
           <div class="page prev" data-target="prev">&lsaquo;</div>
           <div class="page next" data-target="next">&rsaquo;</div>
@@ -281,8 +288,8 @@
       <ul>
         <li><a href="share.html">项目分享</a></li>
         <li><a href="list.html">博文日记</a></li>
-		<li><a href="#">美文欣赏</a></li>
-		<li><a href="#">一起旅行</a></li>
+		<li><a href="essay.html">美文欣赏</a></li>
+		<li><a href="travel.html">一起旅行</a></li>
         <li><a href="info.html">慢生活</a></li>
 		<li><a href="about.html">关于我</a></li>
       </ul>
