--- a/time.html
+++ b/time.html
@@ -43,17 +43,23 @@
       <ul id="starlist">
         <li><a href="index.html">首页</a></li>
         <li><a href="share.html">项目分享</a></li>
-        <li><a href="list.html">博文日记</a></li>
+        <li class="menu"><a href="list.html">博文日记</a>
+          <ul class="sub">
+            <li><a href="esp32learn.html">ESP32开发</a></li>
+            <li><a href="esp8266learn.html">ESP8266</a></li>
+			<li><a href="nrf52learn.html">nRF52832</a></li>
+          </ul>		
+		</li>
         <li class="menu"><a href="fengmian.html">学无止境</a>
           <ul class="sub">
-            <li><a href="#">最新资讯</a></li>
-            <li><a href="#">美文欣赏</a></li>
+            <li><a href="news.html">最新资讯</a></li>
+            <li><a href="essay.html">美文欣赏</a></li>
           </ul>
         </li>
         <li class="menu"><a href="info.html">慢生活</a>
 		  <ul class="sub">
-            <li><a href="#">一起旅游</a></li>
-            <li><a href="#">摄像美图</a></li>
+            <li><a href="travel.html">一起旅行</a></li>
+            <li><a href="picture.html">摄像美图</a></li>
           </ul>
 		</li>  
         <li><a href="time.html">时间轴</a></li>
@@ -64,7 +70,7 @@
 </header>
 <div class="wrapper">
   <main>
-    <h2 class="place">您现在的位置是：首页&gt; <a href="/">时间轴</a></h2>
+    <h2 class="place">您现在的位置是：首页 &gt; <a href="time.html">时间轴</a></h2>
     <div class="timebox">
       <ul>
         <li><span>2018-06-17</span><i><a href="/" target="_blank">安静地做一个爱设计的女子</a></i></li>
