--- a/esp32learn.html
+++ b/esp32learn.html
@@ -70,57 +70,116 @@
 </header>
 <div class="wrapper">
   <main>
-    <h2 class="place">您现在的位置是：首页 &gt; <a href="fengmian.html">学无止境</a></h2>
-    <div class="fengm">
-      <h3><span><a href="news.html" target="_blank">更多+</a></span>最新资讯</h3>
-      <div class="fpicbox">
-        <ul>
-          <li class="fpic"><a href="/" target="_blank"><img src="images/1.jpg"><i>个人博客《草根寻梦》—手机版模板</i></a></li>
-          <li class="fpic"><a href="/" target="_blank"><img src="images/4.jpg"><i>安静地做一个爱设计的女子</i></a></li>
-          <li class="fpic"><a href="/" target="_blank"><img src="images/3.jpg"><i>作为一个设计师,如果遭到质疑你是否能恪守自己的原则</i></a></li>
-        </ul>
-      </div>
-      <ul class="fmnews">
-        <li><span>2018-05-13</span> <a href="/">个人博客《草根寻梦》—手机版模板</a></li>
-        <li><span>2018-05-13</span> <a href="/">安静地做一个爱设计的女子</a></li>
-        <li><span>2018-05-13</span> <a href="/">作为一个设计师,如果遭到质疑你是否能恪守自己的原则?</a></li>
-        <li><span>2018-05-13</span> <a href="/">个人博客，属于我的小世界！</a></li>
-        <li><span>2018-05-13</span> <a href="/">Come on,行动起来吧!我们和时间来一场赛跑!</a></li>
-        <li><span>2018-05-13</span> <a href="/">个人博客《草根寻梦》—手机版模板</a></li>
-        <li><span>2018-05-13</span> <a href="/">安静地做一个爱设计的女子</a></li>
-        <li><span>2018-05-13</span> <a href="/">作为一个设计师,如果遭到质疑你是否能恪守自己的原则?</a></li>
-        <li><span>2018-05-13</span> <a href="/">个人博客，属于我的小世界！</a></li>
-        <li><span>2018-05-13</span> <a href="/">Come on,行动起来吧!我们和时间来一场赛跑!</a></li>
+     <h2 class="place">您现在的位置是：首页 &gt; <a href="list.html">博文日记 </a>&gt;<a href="esp32learn.html"> ESP32开发之旅</a></h2>
+
+    <div class="bloglist">
+      <ul>
+        <li> <i class="blogpic"><a href="./src/esp32/19030518.html"><img src="./src/esp32/images/19030518/0.jpg" alt=""> </a></i>
+          <dl>
+            <dt><a href="./src/esp32/19030518.html" target="_blank">ESP32入门Arduino开发(1)：Arduino开发环境搭建</a></dt>
+            <dd><span class="bloginfo">今天我将说说如何搭建arduino IDE编译环境。其实，ESP32（ESP-WROOM-32）点击购买的开发平台很多的，linux下的eclipse，OS，以及windows下的cygwin，对于我们这些小白用户来说，神马linux、神马OS平台，都太高深了，所以，还是Arduino IDE简单~~~</span>
+              <p class="timeinfo"><span class="lanmu"><a href="esp32learn.html" target="_blank">esp32</a></span><span class="date">2018-01-31</span></p>
+              <a class="read" href="/">阅读更多</a> </dd>
+          </dl>
+        </li>
+        <li> <i class="blogpic"><a href="#"><img src="images/2.jpg" alt=""> </a></i>
+          <dl>
+            <dt><a href="#" target="_blank">第二届 优秀个人博客模板比赛参选活动</a></dt>
+            <dd><span class="bloginfo">只要你是在校大学生，不管你是新生，还是即将毕业，不管你是前端菜鸟，还是前端大神，只要你会html，这里将会是你展示才能的大平台</span>
+              <p class="timeinfo"><span class="lanmu"><a href="#" target="_blank">个人博客</a></span><span class="date">2018-07-03</span></p>
+              <a class="read" href="/">阅读更多</a> </dd>
+          </dl>
+        </li>
+        <li> <i class="blogpic"><a href="#"><img src="images/3.jpg" alt=""> </a></i>
+          <dl>
+            <dt><a href="#" target="_blank">D设计师博客-一个热爱生活的设计师</a></dt>
+            <dd><span class="bloginfo">D设计师博客网站，站长是一个80后室内设计师！也是一个机械设计工程师，一边工作一边积累经验，也经常逛技术论坛，发点文章，回复一些技术问题。做过设计论坛，被称为“神”的技术大咖。...</span>
+              <p class="timeinfo"><span class="lanmu"><a href="#" target="_blank">个人博客</a></span><span class="date">2018-07-03</span></p>
+              <a class="read" href="/">阅读更多</a> </dd>
+          </dl>
+        </li>
+        <li> <i class="blogpic"><a href="#"><img src="images/4.jpg" alt=""> </a></i>
+          <dl>
+            <dt><a href="#" target="_blank">《寻之旅》一个关于旅游，游记的个人博客</a></dt>
+            <dd><span class="bloginfo">《寻之旅》www.searchtrip.cn 这是一个记录游记，旅游分享的个人博客，我们相识于3月份，一句“你可以先不要删我嘛”，还有海绵宝宝的头像，让我对他印象深刻...</span>
+              <p class="timeinfo"><span class="lanmu"><a href="#" target="_blank">个人博客</a></span><span class="date">2018-07-03</span></p>
+              <a class="read" href="/">阅读更多</a> </dd>
+          </dl>
+        </li>
+        <li> <i class="blogpic"><a href="#"><img src="images/5.jpg" alt=""> </a></i>
+          <dl>
+            <dt><a href="#" target="_blank">个人博客，我为什么要用帝国cms？</a></dt>
+            <dd><span class="bloginfo">选择帝国cms，做一个博客系统，很多人都说是大材小用。确实是有那种感觉，因为cms有很多功能表用不上。但是帝国cms的安装包也就才6M，如果你放一张高清的1920的图，都比这安装包大！我就来说一说我为什么要用帝国cms...</span>
+              <p class="timeinfo"><span class="lanmu"><a href="#" target="_blank">个人博客</a></span><span class="date">2018-07-03</span></p>
+              <a class="read" href="/">阅读更多</a> </dd>
+          </dl>
+        </li>
+        <li> <i class="blogpic"><a href="#"><img src="images/6.jpg" alt=""> </a></i>
+          <dl>
+            <dt><a href="#" target="_blank">第二届 优秀个人博客模板比赛参选活动</a></dt>
+            <dd><span class="bloginfo">只要你是在校大学生，不管你是新生，还是即将毕业，不管你是前端菜鸟，还是前端大神，只要你会html，这里将会是你展示才能的大平台</span>
+              <p class="timeinfo"><span class="lanmu"><a href="#" target="_blank">个人博客</a></span><span class="date">2018-07-03</span></p>
+              <a class="read" href="/">阅读更多</a> </dd>
+          </dl>
+        </li>
+        <li> <i class="blogpic"><a href="#"><img src="images/7.jpg" alt=""> </a></i>
+          <dl>
+            <dt><a href="#" target="_blank">D设计师博客-一个热爱生活的设计师</a></dt>
+            <dd><span class="bloginfo">D设计师博客网站，站长是一个80后室内设计师！也是一个机械设计工程师，一边工作一边积累经验，也经常逛技术论坛，发点文章，回复一些技术问题。做过设计论坛，被称为“神”的技术大咖。...</span>
+              <p class="timeinfo"><span class="lanmu"><a href="#" target="_blank">个人博客</a></span><span class="date">2018-07-03</span></p>
+              <a class="read" href="/">阅读更多</a> </dd>
+          </dl>
+        </li>
+        <li> <i class="blogpic"><a href="#"><img src="images/8.jpg" alt=""> </a></i>
+          <dl>
+            <dt><a href="#" target="_blank">《寻之旅》一个关于旅游，游记的个人博客</a></dt>
+            <dd><span class="bloginfo">《寻之旅》www.searchtrip.cn 这是一个记录游记，旅游分享的个人博客，我们相识于3月份，一句“你可以先不要删我嘛”，还有海绵宝宝的头像，让我对他印象深刻...</span>
+              <p class="timeinfo"><span class="lanmu"><a href="#" target="_blank">个人博客</a></span><span class="date">2018-07-03</span></p>
+              <a class="read" href="/">阅读更多</a> </dd>
+          </dl>
+        </li>
+        <li> <i class="blogpic"><a href="#"><img src="images/9.jpg" alt=""> </a></i>
+          <dl>
+            <dt><a href="#" target="_blank">个人博客，我为什么要用帝国cms？</a></dt>
+            <dd><span class="bloginfo">选择帝国cms，做一个博客系统，很多人都说是大材小用。确实是有那种感觉，因为cms有很多功能表用不上。但是帝国cms的安装包也就才6M，如果你放一张高清的1920的图，都比这安装包大！我就来说一说我为什么要用帝国cms...</span>
+              <p class="timeinfo"><span class="lanmu"><a href="#" target="_blank">个人博客</a></span><span class="date">2018-07-03</span></p>
+              <a class="read" href="/">阅读更多</a> </dd>
+          </dl>
+        </li>
+        <li> <i class="blogpic"><a href="#"><img src="images/10.jpg" alt=""> </a></i>
+          <dl>
+            <dt><a href="#" target="_blank">第二届 优秀个人博客模板比赛参选活动</a></dt>
+            <dd><span class="bloginfo">只要你是在校大学生，不管你是新生，还是即将毕业，不管你是前端菜鸟，还是前端大神，只要你会html，这里将会是你展示才能的大平台</span>
+              <p class="timeinfo"><span class="lanmu"><a href="#" target="_blank">个人博客</a></span><span class="date">2018-07-03</span></p>
+              <a class="read" href="/">阅读更多</a> </dd>
+          </dl>
+        </li>
+        <li> <i class="blogpic"><a href="#"><img src="images/11.jpg" alt=""> </a></i>
+          <dl>
+            <dt><a href="#" target="_blank">D设计师博客-一个热爱生活的设计师</a></dt>
+            <dd><span class="bloginfo">D设计师博客网站，站长是一个80后室内设计师！也是一个机械设计工程师，一边工作一边积累经验，也经常逛技术论坛，发点文章，回复一些技术问题。做过设计论坛，被称为“神”的技术大咖。...</span>
+              <p class="timeinfo"><span class="lanmu"><a href="#" target="_blank">个人博客</a></span><span class="date">2018-07-03</span></p>
+              <a class="read" href="/">阅读更多</a> </dd>
+          </dl>
+        </li>
+        <li> <i class="blogpic"><a href="#"><img src="images/12.jpg" alt=""> </a></i>
+          <dl>
+            <dt><a href="#" target="_blank">《寻之旅》一个关于旅游，游记的个人博客</a></dt>
+            <dd><span class="bloginfo">《寻之旅》www.searchtrip.cn 这是一个记录游记，旅游分享的个人博客，我们相识于3月份，一句“你可以先不要删我嘛”，还有海绵宝宝的头像，让我对他印象深刻...</span>
+              <p class="timeinfo"><span class="lanmu"><a href="#" target="_blank">个人博客</a></span><span class="date">2018-07-03</span></p>
+              <a class="read" href="/">阅读更多</a> </dd>
+          </dl>
+        </li>
       </ul>
     </div>
-    <div class="fengm">
-      <h3><span><a href="essay.html" target="_blank">更多+</a></span>美文欣赏</h3>
-      <div class="fpicbox">
-        <ul>
-          <li class="fpic"><a href="/" target="_blank"><img src="images/7.jpg"><i>个人博客《草根寻梦》—手机版模板</i></a></li>
-          <li class="fpic"><a href="/" target="_blank"><img src="images/8.jpg"><i>安静地做一个爱设计的女子</i></a></li>
-          <li class="fpic"><a href="/" target="_blank"><img src="images/9.jpg"><i>作为一个设计师,如果遭到质疑你是否能恪守自己的原则</i></a></li>
-        </ul>
-      </div>
-      <ul class="fmnews">
-        <li><span>2018-05-13</span> <a href="/">个人博客《草根寻梦》—手机版模板</a></li>
-        <li><span>2018-05-13</span> <a href="/">安静地做一个爱设计的女子</a></li>
-        <li><span>2018-05-13</span> <a href="/">作为一个设计师,如果遭到质疑你是否能恪守自己的原则?</a></li>
-        <li><span>2018-05-13</span> <a href="/">个人博客，属于我的小世界！</a></li>
-        <li><span>2018-05-13</span> <a href="/">Come on,行动起来吧!我们和时间来一场赛跑!</a></li>
-        <li><span>2018-05-13</span> <a href="/">个人博客《草根寻梦》—手机版模板</a></li>
-        <li><span>2018-05-13</span> <a href="/">安静地做一个爱设计的女子</a></li>
-        <li><span>2018-05-13</span> <a href="/">作为一个设计师,如果遭到质疑你是否能恪守自己的原则?</a></li>
-        <li><span>2018-05-13</span> <a href="/">个人博客，属于我的小世界！</a></li>
-        <li><span>2018-05-13</span> <a href="/">Come on,行动起来吧!我们和时间来一场赛跑!</a></li>
-      </ul>
-    </div>
+    <!--bloglist end--> 
+    <div class="pagelist"><a title="Total record">&nbsp;<b>共2页</b> </a>&nbsp;&nbsp;&nbsp;<b>1</b>&nbsp;<a href="/jstt/index_2.html">2</a>&nbsp;<a href="/jstt/index_2.html">下一页</a>&nbsp;<a href="/jstt/index_14.html">尾页</a></div>
   </main>
   <aside class="sidebar">
     <div class="fenlei">
       <ul class="flnav">
         <li class="flselect"><a href="#" title="最新文章" class="pall"></a></li>
-        <li><a href="#" title="站长推荐" class="pgood"></a></li>
+        <li><a href="#" title="友情推荐" class="pgood"></a></li>
         <li><a href="#" title="点击排行" class="pbro"></a></li>
         <li><a href="#" title="头条关注" class="pfav"></a></li>
       </ul>
@@ -145,7 +204,7 @@
           <span>2018-05-13</span> </li>
       </ul>
       <ul class="sidenews">
-        <h2>站长推荐</h2>
+        <h2>友情推荐</h2>
         <li> <i><img src="images/6.jpg"></i>
           <p><a href="/">别让这些闹心的套路，毁了你的网页设计</a></p>
           <span>2018-05-13</span> </li>
