--- a/picture.html
+++ b/picture.html
@@ -70,57 +70,72 @@
 </header>
 <div class="wrapper">
   <main>
-    <h2 class="place">您现在的位置是：首页 &gt; <a href="fengmian.html">学无止境</a></h2>
-    <div class="fengm">
-      <h3><span><a href="news.html" target="_blank">更多+</a></span>最新资讯</h3>
-      <div class="fpicbox">
-        <ul>
-          <li class="fpic"><a href="/" target="_blank"><img src="images/1.jpg"><i>个人博客《草根寻梦》—手机版模板</i></a></li>
-          <li class="fpic"><a href="/" target="_blank"><img src="images/4.jpg"><i>安静地做一个爱设计的女子</i></a></li>
-          <li class="fpic"><a href="/" target="_blank"><img src="images/3.jpg"><i>作为一个设计师,如果遭到质疑你是否能恪守自己的原则</i></a></li>
-        </ul>
-      </div>
-      <ul class="fmnews">
-        <li><span>2018-05-13</span> <a href="/">个人博客《草根寻梦》—手机版模板</a></li>
-        <li><span>2018-05-13</span> <a href="/">安静地做一个爱设计的女子</a></li>
-        <li><span>2018-05-13</span> <a href="/">作为一个设计师,如果遭到质疑你是否能恪守自己的原则?</a></li>
-        <li><span>2018-05-13</span> <a href="/">个人博客，属于我的小世界！</a></li>
-        <li><span>2018-05-13</span> <a href="/">Come on,行动起来吧!我们和时间来一场赛跑!</a></li>
-        <li><span>2018-05-13</span> <a href="/">个人博客《草根寻梦》—手机版模板</a></li>
-        <li><span>2018-05-13</span> <a href="/">安静地做一个爱设计的女子</a></li>
-        <li><span>2018-05-13</span> <a href="/">作为一个设计师,如果遭到质疑你是否能恪守自己的原则?</a></li>
-        <li><span>2018-05-13</span> <a href="/">个人博客，属于我的小世界！</a></li>
-        <li><span>2018-05-13</span> <a href="/">Come on,行动起来吧!我们和时间来一场赛跑!</a></li>
+   <h2 class="place">您现在的位置是：首页 &gt; <a href="info.html">慢生活 </a>&gt; <a href="picture.html">摄像美图</a></h2>
+    <div class="sharelist">
+   
+<ul>
+        <li>
+          <div class="tpic"><img src="images/1.jpg"></div>
+          <b>6条网页设计配色原则,让你秒变配色高手</b><span>网页设计好不好看,颜色是毋庸置疑要排首位的,所以关于颜色的搭配技巧以及原则,对于每一个要学习web前端设计的新手来说,这都是一个重要的学习过程.在本教程中我们将与你分享...</span><a href="/" class="readmore">阅读原文</a></li>
+        <li>
+          <div class="tpic"><img src="images/2.jpg"></div>
+          <b>作为一个设计师,如果遭到质疑你是否能恪守自己的原则</b><span>就拿我自己来说吧，有时候会很矛盾，设计好的作品，不把它分享出来，会觉得待在自己电脑里面实在是没有意义...</span><a href="/" class="readmore">阅读原文</a></li>
+        <li>
+          <div class="tpic"><img src="images/3.jpg"></div>
+          <b>愿有人陪你一起颠沛流离</b><span>有一天晚上我收到朋友的邮件，他问我怎样可以最快地摆脱寂寞，我想了想不知道应该怎么回答他，因为我从来没有摆脱过这个问题，我只能去习惯它，就像习惯身体的一部分...</span><a href="/" class="readmore">阅读原文</a></li>
+        <li>
+          <div class="tpic"><img src="images/4.jpg"></div>
+          <b>你要去相信，没有到不了的明天</b><span>不管你现在是一个人走在异乡的街道上始终没有找到一丝归属感，还是你在跟朋友们一起吃饭开心地笑着的时候闪过一丝落寞。...</span><a href="/" class="readmore">阅读原文</a></li>
+        <li>
+          <div class="tpic"><img src="images/5.jpg"></div>
+          <b>美丽的茧</b><span>让世界拥有它的脚步，让我保有我的茧。当溃烂已极的心灵再不想做一丝一毫的思索时，就让我静静回到我的茧内，以回忆为睡榻，以悲哀为覆被，这是我唯一的美丽。...</span><a href="/" class="readmore">阅读原文</a></li>
+        <li>
+          <div class="tpic"><img src="images/6.jpg"></div>
+          <b>6条网页设计配色原则,让你秒变配色高手</b><span>网页设计好不好看,颜色是毋庸置疑要排首位的,所以关于颜色的搭配技巧以及原则,对于每一个要学习web前端设计的新手来说,这都是一个重要的学习过程.在本教程中我们将与你分享...</span><a href="/" class="readmore">阅读原文</a></li>
+                  <li>
+          <div class="tpic"><img src="images/7.jpg"></div>
+          <b>6条网页设计配色原则,让你秒变配色高手</b><span>网页设计好不好看,颜色是毋庸置疑要排首位的,所以关于颜色的搭配技巧以及原则,对于每一个要学习web前端设计的新手来说,这都是一个重要的学习过程.在本教程中我们将与你分享...</span><a href="/" class="readmore">阅读原文</a></li>
+        <li>
+          <div class="tpic"><img src="images/8.jpg"></div>
+          <b>作为一个设计师,如果遭到质疑你是否能恪守自己的原则</b><span>就拿我自己来说吧，有时候会很矛盾，设计好的作品，不把它分享出来，会觉得待在自己电脑里面实在是没有意义...</span><a href="/" class="readmore">阅读原文</a></li>
+        <li>
+          <div class="tpic"><img src="images/9.jpg"></div>
+          <b>愿有人陪你一起颠沛流离</b><span>有一天晚上我收到朋友的邮件，他问我怎样可以最快地摆脱寂寞，我想了想不知道应该怎么回答他，因为我从来没有摆脱过这个问题，我只能去习惯它，就像习惯身体的一部分...</span><a href="/" class="readmore">阅读原文</a></li>
+        <li>
+          <div class="tpic"><img src="images/10.jpg"></div>
+          <b>你要去相信，没有到不了的明天</b><span>不管你现在是一个人走在异乡的街道上始终没有找到一丝归属感，还是你在跟朋友们一起吃饭开心地笑着的时候闪过一丝落寞。...</span><a href="/" class="readmore">阅读原文</a></li>        <li>
+          <div class="tpic"><img src="images/3.jpg"></div>
+          <b>愿有人陪你一起颠沛流离</b><span>有一天晚上我收到朋友的邮件，他问我怎样可以最快地摆脱寂寞，我想了想不知道应该怎么回答他，因为我从来没有摆脱过这个问题，我只能去习惯它，就像习惯身体的一部分...</span><a href="/" class="readmore">阅读原文</a></li>
+        <li>
+          <div class="tpic"><img src="images/4.jpg"></div>
+          <b>你要去相信，没有到不了的明天</b><span>不管你现在是一个人走在异乡的街道上始终没有找到一丝归属感，还是你在跟朋友们一起吃饭开心地笑着的时候闪过一丝落寞。...</span><a href="/" class="readmore">阅读原文</a></li>
+        <li>
+          <div class="tpic"><img src="images/5.jpg"></div>
+          <b>美丽的茧</b><span>让世界拥有它的脚步，让我保有我的茧。当溃烂已极的心灵再不想做一丝一毫的思索时，就让我静静回到我的茧内，以回忆为睡榻，以悲哀为覆被，这是我唯一的美丽。...</span><a href="/" class="readmore">阅读原文</a></li>
+        <li>
+          <div class="tpic"><img src="images/6.jpg"></div>
+          <b>6条网页设计配色原则,让你秒变配色高手</b><span>网页设计好不好看,颜色是毋庸置疑要排首位的,所以关于颜色的搭配技巧以及原则,对于每一个要学习web前端设计的新手来说,这都是一个重要的学习过程.在本教程中我们将与你分享...</span><a href="/" class="readmore">阅读原文</a></li>
+                  <li>
+          <div class="tpic"><img src="images/7.jpg"></div>
+          <b>6条网页设计配色原则,让你秒变配色高手</b><span>网页设计好不好看,颜色是毋庸置疑要排首位的,所以关于颜色的搭配技巧以及原则,对于每一个要学习web前端设计的新手来说,这都是一个重要的学习过程.在本教程中我们将与你分享...</span><a href="/" class="readmore">阅读原文</a></li>
+        <li>
+          <div class="tpic"><img src="images/8.jpg"></div>
+          <b>作为一个设计师,如果遭到质疑你是否能恪守自己的原则</b><span>就拿我自己来说吧，有时候会很矛盾，设计好的作品，不把它分享出来，会觉得待在自己电脑里面实在是没有意义...</span><a href="/" class="readmore">阅读原文</a></li>
+        <li>
+          <div class="tpic"><img src="images/11.jpg"></div>
+          <b>美丽的茧</b><span>让世界拥有它的脚步，让我保有我的茧。当溃烂已极的心灵再不想做一丝一毫的思索时，就让我静静回到我的茧内，以回忆为睡榻，以悲哀为覆被，这是我唯一的美丽。...</span><a href="/" class="readmore">阅读原文</a></li>
+        <li>
+          <div class="tpic"><img src="images/12.jpg"></div>
+          <b>6条网页设计配色原则,让你秒变配色高手</b><span>网页设计好不好看,颜色是毋庸置疑要排首位的,所以关于颜色的搭配技巧以及原则,对于每一个要学习web前端设计的新手来说,这都是一个重要的学习过程.在本教程中我们将与你分享...</span><a href="/" class="readmore">阅读原文</a></li>
       </ul>
     </div>
-    <div class="fengm">
-      <h3><span><a href="essay.html" target="_blank">更多+</a></span>美文欣赏</h3>
-      <div class="fpicbox">
-        <ul>
-          <li class="fpic"><a href="/" target="_blank"><img src="images/7.jpg"><i>个人博客《草根寻梦》—手机版模板</i></a></li>
-          <li class="fpic"><a href="/" target="_blank"><img src="images/8.jpg"><i>安静地做一个爱设计的女子</i></a></li>
-          <li class="fpic"><a href="/" target="_blank"><img src="images/9.jpg"><i>作为一个设计师,如果遭到质疑你是否能恪守自己的原则</i></a></li>
-        </ul>
-      </div>
-      <ul class="fmnews">
-        <li><span>2018-05-13</span> <a href="/">个人博客《草根寻梦》—手机版模板</a></li>
-        <li><span>2018-05-13</span> <a href="/">安静地做一个爱设计的女子</a></li>
-        <li><span>2018-05-13</span> <a href="/">作为一个设计师,如果遭到质疑你是否能恪守自己的原则?</a></li>
-        <li><span>2018-05-13</span> <a href="/">个人博客，属于我的小世界！</a></li>
-        <li><span>2018-05-13</span> <a href="/">Come on,行动起来吧!我们和时间来一场赛跑!</a></li>
-        <li><span>2018-05-13</span> <a href="/">个人博客《草根寻梦》—手机版模板</a></li>
-        <li><span>2018-05-13</span> <a href="/">安静地做一个爱设计的女子</a></li>
-        <li><span>2018-05-13</span> <a href="/">作为一个设计师,如果遭到质疑你是否能恪守自己的原则?</a></li>
-        <li><span>2018-05-13</span> <a href="/">个人博客，属于我的小世界！</a></li>
-        <li><span>2018-05-13</span> <a href="/">Come on,行动起来吧!我们和时间来一场赛跑!</a></li>
-      </ul>
-    </div>
+    <!--bloglist end--> 
   </main>
   <aside class="sidebar">
     <div class="fenlei">
       <ul class="flnav">
         <li class="flselect"><a href="#" title="最新文章" class="pall"></a></li>
-        <li><a href="#" title="站长推荐" class="pgood"></a></li>
+        <li><a href="#" title="友情推荐" class="pgood"></a></li>
         <li><a href="#" title="点击排行" class="pbro"></a></li>
         <li><a href="#" title="头条关注" class="pfav"></a></li>
       </ul>
@@ -145,7 +160,7 @@
           <span>2018-05-13</span> </li>
       </ul>
       <ul class="sidenews">
-        <h2>站长推荐</h2>
+        <h2>友情推荐</h2>
         <li> <i><img src="images/6.jpg"></i>
           <p><a href="/">别让这些闹心的套路，毁了你的网页设计</a></p>
           <span>2018-05-13</span> </li>
