--- a/share.html
+++ b/share.html
@@ -43,17 +43,23 @@
       <ul id="starlist">
         <li><a href="index.html">首页</a></li>
         <li><a href="share.html">项目分享</a></li>
-        <li><a href="list.html">博文日记</a></li>
+        <li class="menu"><a href="list.html">博文日记</a>
+          <ul class="sub">
+            <li><a href="esp32learn.html">ESP32开发</a></li>
+            <li><a href="esp8266learn.html">ESP8266</a></li>
+			<li><a href="nrf52learn.html">nRF52832</a></li>
+          </ul>		
+		</li>
         <li class="menu"><a href="fengmian.html">学无止境</a>
           <ul class="sub">
-            <li><a href="#">最新资讯</a></li>
-            <li><a href="#">美文欣赏</a></li>
+            <li><a href="news.html">最新资讯</a></li>
+            <li><a href="essay.html">美文欣赏</a></li>
           </ul>
         </li>
         <li class="menu"><a href="info.html">慢生活</a>
 		  <ul class="sub">
-            <li><a href="#">一起旅游</a></li>
-            <li><a href="#">摄像美图</a></li>
+            <li><a href="travel.html">一起旅行</a></li>
+            <li><a href="picture.html">摄像美图</a></li>
           </ul>
 		</li>  
         <li><a href="time.html">时间轴</a></li>
@@ -64,7 +70,7 @@
 </header>
 <div class="wrapper">
   <main>
-   <h2 class="place">您现在的位置是：首页&gt; <a href="/">项目分享</a></h2>
+   <h2 class="place">您现在的位置是：首页 &gt; <a href="share.html">项目分享</a></h2>
     <div class="sharelist">
    
 <ul>
@@ -124,7 +130,7 @@
       </ul>
     </div>
     <!--bloglist end--> 
-    <div class="pagelist"><a title="Total record">&nbsp;<b>163</b> </a>&nbsp;&nbsp;&nbsp;<b>1</b>&nbsp;<a href="/jstt/index_2.html">2</a>&nbsp;<a href="/jstt/index_3.html">3</a>&nbsp;<a href="/jstt/index_4.html">4</a>&nbsp;<a href="/jstt/index_5.html">5</a>&nbsp;<a href="/jstt/index_6.html">6</a>&nbsp;<a href="/jstt/index_2.html">下一页</a>&nbsp;<a href="/jstt/index_14.html">尾页</a></div>
+    <div class="pagelist"><a title="Total record">&nbsp;<b>共2页</b> </a>&nbsp;&nbsp;&nbsp;<b>1</b>&nbsp;<a href="/jstt/index_2.html">2</a>&nbsp;<a href="/jstt/index_2.html">下一页</a>&nbsp;<a href="/jstt/index_2.html">尾页</a></div>
   </main>
   <aside class="sidebar">
     <div class="fenlei">
@@ -227,8 +233,8 @@
       <ul>
         <li><a href="share.html">项目分享</a></li>
         <li><a href="list.html">博文日记</a></li>
-		<li><a href="#">美文欣赏</a></li>
-		<li><a href="#">一起旅行</a></li>
+		<li><a href="essay.html">美文欣赏</a></li>
+		<li><a href="travel.html">一起旅行</a></li>
         <li><a href="info.html">慢生活</a></li>
 		<li><a href="about.html">关于我</a></li>
       </ul>
