--- a/time.html
+++ b/time.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta charset="gbk">
+<link rel="shortcut icon" type="image/x-icon" href="images/logo.ico"media="screen" />
 <title>Afantor::Awesome DIY Project</title>
 <meta name="keywords" content="Afantor,ESP32,ESP8266,MicroPython,nRF52832,Bluetooth,Bluefruit" />
 <meta name="description" content="Afantor个人技术博客，是一个记录开源硬件开发设计和学习笔记的博文站点。" />
