--- a/eba_mk2.html
+++ b/eba_mk2.html
@@ -82,6 +82,7 @@
                           <li class="current"><a href="http://www.eezyrobots.it/eba_mk2.html#service">INSTRUCTIONS</a></li>
                           <li><a href="http://www.eezyrobots.it/eba_mk2.html#portfolio">MAKES</a></li>
                           <li><a href="./">Privacy</a></li>   
+                          <li><a href="./eba_mk2_en.html"> <img src="./img/icons/en.png"></a></li>
                     <!-- /        <li class="current"><a href="index.html">Home</a></li>                       
                     <!-- /        <li><a href="#about">About</a></li>
                     <!-- /        <li><a href="#pricing">Pricing</a></li>  -->
