--- a/eba_mk2_en.html
+++ b/eba_mk2_en.html
@@ -283,19 +283,20 @@
 
                                 
                                 <br>NON PRINTED PARTS BOM list :
-<br>n.3 955 or 946 servo
+<br>
+<br>n.3 995 or 996 or 955 or 946 servo
 <br>n.1 SG90 SERVO
 <br>n.1 M6 selflocking nut
-<br>n.1 M6x25 screw
+<br>n.1 M6x25 screw (washers)
 <br>n.2 M3 selflocking nuts
-<br>n.2 M3 x 20 screws
+<br>n.2 M3 x 25 screws
 <br>n.1 M3 x 10 hex recessed head screw
 <br>n.9 M4 selflocking nuts
 <br>n.1 M4 x 40 screw
 <br>n.1 M4 x 30 screw
 <br>n.5 M4 x 20 screw
 <br>n.1 M4 x 60mm threated rod
-<br>n.1 M4 x 32mm threated rod
+<br>n.1 M4 x 34mm threated rod
 <br>n.25 dia 6 mm ball spheres
 <br>n.1 606zz bearing
 <br>some M4 washers
@@ -414,7 +415,7 @@
                             </a>
                             <div class="media-body">
                                 <h3><br>STEP 9</h3>
-                                <p>Fill the path using about 25 spheres with a diameter of 6mm.</p>                            
+                                <p>Fill the path using about 30 spheres with a diameter of 6mm.</p>                            
                             </div>
                         </div>
                     </div>
