--- a/eba_mk2.html
+++ b/eba_mk2.html
@@ -68,7 +68,7 @@
                     <!-- logo -->
                     <h1 class="navbar-brand">
                         <a href="http://www.afantor.cc">
-                            <img src="./img/logo.png" alt="EEZYrobots Logo">
+                            <h1>Afantor</h1>
                         </a>
                     </h1>
                     <!-- /logo -->
@@ -79,8 +79,8 @@
                     <nav class="collapse navigation navbar-collapse navbar-right" role="navigation">
                         <ul id="nav" class="nav navbar-nav">
                           <li><a href="http://www.afantor.cc">主页</a></li>
-                          <li class="current"><a href="http://www.eezyrobots.it/eba_mk2.html#service">教程</a></li>
-                          <li><a href="http://www.eezyrobots.it/eba_mk2.html#portfolio">作品</a></li>
+                          <li class="current"><a href="http://www.afantor.cc/eba_mk2.html#service">教程</a></li>
+                          <li><a href="http://www.afantor.cc/eba_mk2.html#portfolio">作品</a></li>
                           <li><a href="./">声明</a></li>   
                           <li><a href="./eba_mk2_en.html"> <img src="./img/icons/en.png"></a></li>
                     <!-- /        <li class="current"><a href="index.html">Home</a></li>                       
@@ -224,9 +224,11 @@
                                 <img src="./img/eba2/eba2step001.jpg" alt="step5">
                             </a>
                             <div class="media-body">
-                                <h3>ONSHAPE</h3>
+                                <h3>文件</h3>
                                 <p>CAD文件：<br>我在我的Onshape帐户上提供了EEZYbotARM mk2的源CAD文件： <a href="https://goo.gl/ACnRhT" target="_blank">此处</a>
-                                <br> 您可以复制，修改和导出文件。</p>                            
+                                <br> 您可以复制，修改和导出文件。</p>  
+                                <p>STL文件：<br>我在我的Thingiverse帐户上提供了EEZYbotARM mk2的STL文件： <a href="https://www.thingiverse.com/thing:1454048" target="_blank">此处</a>
+                                <br> 您可以下载和导出文件，自行3D打印结构件。</p>                           
                             </div>
                         </div>
                     </div>
@@ -254,7 +256,7 @@
                                 <img src="./img/eba2/eba2step003.jpg" alt="materials">
                             </a>
                             <div class="media-body">
-                                <h3><br>物料</h3>
+                                <h3><br>物料清单</h3>
                                 
                             <p>3D打印结构件清单列表:</p><p>
 <br>EBAmk2_001_base.STL	
@@ -690,10 +692,8 @@
                     <div class="col-lg-12">
 
                         <div class="footer-logo wow fadeInDown" style="visibility: hidden; animation-name: none;">
-                            <img src="./img/logo.png" alt="logo">
+                            <h1>Afantor</h1>
                         </div>
-
-                        
 
                         <div class="copyright">
                             <p><i class="fa fa-copyright"></i> Carlo Franciscone 2019</p>
