--- a/eba_mk2_en.html
+++ b/eba_mk2_en.html
@@ -68,7 +68,7 @@
                     <!-- logo -->
                     <h1 class="navbar-brand">
                         <a href="http://www.afantor.cc">
-                            <img src="./img/logo.png" alt="EEZYrobots Logo">
+                            <h1>Afantor</h1>
                         </a>
                     </h1>
                     <!-- /logo -->
@@ -79,8 +79,8 @@
                     <nav class="collapse navigation navbar-collapse navbar-right" role="navigation">
                         <ul id="nav" class="nav navbar-nav">
                           <li><a href="http://www.afantor.cc">HOME</a></li>
-                          <li class="current"><a href="http://www.eezyrobots.it/eba_mk2.html#service">INSTRUCTIONS</a></li>
-                          <li><a href="http://www.eezyrobots.it/eba_mk2.html#portfolio">MAKES</a></li>
+                          <li class="current"><a href="http://www.afantor.cc/eba_mk2.html#service">INSTRUCTIONS</a></li>
+                          <li><a href="http://www.afantor.cc/eba_mk2.html#portfolio">MAKES</a></li>
                           <li><a href="./">Privacy</a></li>   
                           <li><a href="./eba_mk2.html"> <img src="./img/icons/China.png"></a></li>
                     <!-- /        <li class="current"><a href="index.html">Home</a></li>                       
@@ -224,9 +224,11 @@
                                 <img src="./img/eba2/eba2step001.jpg" alt="step5">
                             </a>
                             <div class="media-body">
-                                <h3>ONSHAPE</h3>
+                                <h3>FILES</h3>
                                 <p>CAD FILES :<br>I made available the source CAD files of the EEZYbotARM mk2 on my Onshape account : <a href="https://goo.gl/ACnRhT" target="_blank">here </a>
-                                <br> You can copy, modify and export files. (copied 483 times 20/02/18)</p>                            
+                                <br> You can copy, modify and export files.</p>   
+                                <p>STL FILES :<br>I made available the source STL files of the EEZYbotARM mk2 on my Thingiverse account : <a href="https://www.thingiverse.com/thing:1454048" target="_blank">here </a>
+                                <br> You can download and export files.Print 3D structural parts by yourself.</p>                           
                             </div>
                         </div>
                     </div>
@@ -693,7 +695,7 @@
                     <div class="col-lg-12">
 
                         <div class="footer-logo wow fadeInDown" style="visibility: hidden; animation-name: none;">
-                            <img src="./img/logo.png" alt="logo">
+                            <h1>Afantor</h1>
                         </div>
 
                         
