--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <!-- logo -->
                     <h1 class="navbar-brand">
                         <a href="./index.html#body">
-                            <img src="./img/icons/Logo_3.png" alt="Afantor Logo">
+                            <h1>Afantor</h1>
                         </a>
                     </h1>
                     <!-- /logo -->
@@ -201,14 +201,14 @@
 
                     <div class="col-md-6 col-sm-12 wow fadeInLeft animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
                         <div class="media">
-                            <a href="./eba_mk1.html" class="pull-left">
-                                <img src="./img/icons/EBA1prew.jpg" class="media-object" alt="mk1">
+                            <a href="./nrf52_bluefruit.html" class="pull-left">
+                                <img src="./img/icons/Bluefruit52.png" class="media-object" alt="mk1">
                             </a>
                             <div class="media-body">
-                                <h3>EEZYbotARM</h3>
-                                <p>3DPrinted small robotic Arm. 
-                                <br>Available for free download on  <a href="http://www.thingiverse.com/thing:1015238" target="_blank">Thinghiverse</a>.
-                                <br>Detailed instruction at <a href="http://www.instructables.com/id/EEZYbotARM/" target="_blank">Instructables</a>.<br>Demo video on <a href="https://www.youtube.com/watch?v=qovZKW0DxWk" target="_blank">YouTube</a>.
+                                <h3>Bluefruit52 Board</h3>
+                                <p>nRF52832 Bluetooth Board. 
+                                <br>Detailed instruction at  <a href="https://blog.csdn.net/solar_Lan/article/details/88688451" target="_blank">CSDN blogs</a>.
+                                <br>Shop on here <a href="https://www.adafruit.com/product/3406" target="_blank">Taobao</a>.<br>Demo video on <a href="https://www.youtube.com/watch?v=WxfWDCgo-k4" target="_blank">YouTube</a>.
                                 </p>
                             </div>
                         </div>
@@ -264,13 +264,13 @@
 
                     <div class="col-md-6 col-sm-12 wow fadeInLeft" data-wow-delay="0.2s" style="visibility: hidden; animation-delay: 0.2s; animation-name: none;">
                         <div class="media">
-                            <a href="./underc.html" class="pull-left">
-                                <img src="./img/icons/CALCprew.jpg" alt="Calculator">
+                            <a href="./blue_app.html" class="pull-left">
+                                <img src="./img/icons/Bluefruit_APP.png" alt="Bluefruit_APP">
                             </a>
                             <div class="media-body">
                                 <h3>Bluetooth APP</h3>
-                                <p>An android app calculator for calibrating <br>your 3D printer.
-                                <br>Available for free download on  <a href="https://play.google.com/store/apps/details?id=appinventor.ai_carlfranc.taq3DPRINTCALC_V1a" target="_blank">GooglePLAY</a>.
+                                <p>An android app for Bluefruit52 board. <br>Wirelessly connect your Android device <br>to Bluefruit52 LE modules for control <br>& communication with your projects.
+                                <br>Available for free download on  <a href="https://play.google.com/store/apps/details?id=com.adafruit.bluefruit.le.connect" target="_blank">Google PLAY</a>.
                                 <br><br>
                                 </p>
                             </div>
@@ -970,7 +970,7 @@
                     <div class="col-lg-12">
 
                         <div class="footer-logo wow fadeInDown" style="visibility: hidden; animation-name: none;">
-                            <img src="./img/logo.png" alt="logo">
+                            <h1>Afantor</h1>
                         </div>
 
                         <div class="footer-social wow fadeInUp" style="visibility: hidden; animation-name: none;">
