--- a/eba_mk2.html
+++ b/eba_mk2.html
@@ -81,7 +81,7 @@
                           <li><a href="http://www.afantor.cc">主页</a></li>
                           <li class="current"><a href="http://www.afantor.cc/eba_mk2.html#service">教程</a></li>
                           <li><a href="http://www.afantor.cc/eba_mk2.html#portfolio">作品</a></li>
-                          <li><a href="./">声明</a></li>   
+                          <li><a href="./privacy.html">声明</a></li>   
                           <li><a href="./eba_mk2_en.html"> <img src="./img/icons/en.png"></a></li>
                     <!-- /        <li class="current"><a href="index.html">Home</a></li>                       
                     <!-- /        <li><a href="#about">About</a></li>
