--- a/nrf52_bluefruit_en.html
+++ b/nrf52_bluefruit_en.html
@@ -82,7 +82,7 @@
                           <li class="current"><a href="http://www.afantor.cc/nRF52_bluefruit.html#service">INSTRUCTIONS</a></li>
                           <li><a href="http://www.afantor.cc/nRF52_bluefruit.html#portfolio">MAKES</a></li>
                           <li><a href="./">MicroPython</a></li>
-                          <li><a href="./">Privacy</a></li>   
+                          <li><a href="./privacy.html">Privacy</a></li>   
                           <li><a href="./nrf52_bluefruit.html"> <img src="./img/icons/China.png"></a></li>
                     <!-- /        <li class="current"><a href="index.html">Home</a></li>                       
                     <!-- /        <li><a href="#about">About</a></li>
