--- a/blue_app.html
+++ b/blue_app.html
@@ -81,7 +81,7 @@
                           <li><a href="http://www.afantor.cc">主页</a></li>
                           <li class="current"><a href="http://www.afantor.cc/eba_mk2.html#service">介绍</a></li>
                           <li><a href="http://www.afantor.cc/eba_mk2.html#portfolio">应用</a></li>
-                          <li><a href="./">声明</a></li>   
+                          <li><a href="./privacy.html">声明</a></li>   
                           <li><a href="./blue_app_en.html"> <img src="./img/icons/en.png"></a></li>
                         </ul>
                     </nav>
