--- a/eba_mk2_en.html
+++ b/eba_mk2_en.html
@@ -81,7 +81,7 @@
                           <li><a href="http://www.afantor.cc">HOME</a></li>
                           <li class="current"><a href="http://www.afantor.cc/eba_mk2.html#service">INSTRUCTIONS</a></li>
                           <li><a href="http://www.afantor.cc/eba_mk2.html#portfolio">MAKES</a></li>
-                          <li><a href="./">Privacy</a></li>   
+                          <li><a href="./privacy.html">Privacy</a></li>   
                           <li><a href="./eba_mk2.html"> <img src="./img/icons/China.png"></a></li>
                     <!-- /        <li class="current"><a href="index.html">Home</a></li>                       
                     <!-- /        <li><a href="#about">About</a></li>
