--- a/nrf52_bluefruit.html
+++ b/nrf52_bluefruit.html
@@ -81,7 +81,7 @@
                           <li><a href="http://www.afantor.cc">主页</a></li>
                           <li class="current"><a href="http://www.afantor.cc/nRF52_bluefruit.html#service">教程</a></li>
                           <li><a href="http://www.afantor.cc/nRF52_bluefruit.html#portfolio">作品</a></li>
-                          <li><a href="./">Arduino</a></li>
+                          <li><a href="http://www.afantor.cc/nRF52_bluefruit.html#service">Arduino</a></li>
                           <li><a href="./mpy/html/index.html">MicroPython</a></li>
                           <li><a href="./privacy.html">声明</a></li>   
                           <li><a href="./nrf52_bluefruit_en.html"> <img src="./img/icons/en.png"></a></li>
