--- a/nrf52_bluefruit.html
+++ b/nrf52_bluefruit.html
@@ -21,7 +21,7 @@
         <!--
         Google Fonts
         ============================================= -->
-        <link href="./css" rel="stylesheet" type="text/css">
+       <!--  <link href="./css" rel="stylesheet" type="text/css"> -->
 		
         <!--
         CSS
