--- a/privacy.html
+++ b/privacy.html
@@ -16,7 +16,7 @@
         <!--
         Google Fonts
         ============================================= -->
-        <link href="./css" rel="stylesheet" type="text/css">
+        <!-- <link href="./css" rel="stylesheet" type="text/css"> -->
 		
         <!--
         CSS
