--- a/nrf52_bluefruit_en.html
+++ b/nrf52_bluefruit_en.html
@@ -291,7 +291,8 @@
                                 <p>Arduino快速搭建支持nRF52832开发环境.<br>
                                 提供nRF52832驱动软件库，完全兼容Arduino的API函数.<br>
                                 详细的API函数说明文档，丰富的使用例程.<br>
-                                配套APP应用软件，快速开发蓝牙通讯控制。
+                                配套APP应用软件，快速开发蓝牙通讯控制。<br>
+                                nRF52832 Bluefruit52 Arduino支持软件库安装下载地址 <a href="https://github.com/Afantor/Afantor_Bluefruit52_Arduino" target="_blank">GitHub</a>.
                                 </p>
                             </div>
                         </div>
@@ -306,7 +307,8 @@
                                 <p>nRF52832支持MicroPython固件.<br>
                                    提供MicroPython编辑器，快速编辑程序，上传脚本，运行脚本.<br>
                                    详细的MicroPython使用说明API文档，提供丰富的例程.<br>
-                                   Python编程驱动板载外设，持续更新维护固件。
+                                   Python编程驱动板载外设，持续更新维护固件。<br>
+                                   nRF52832 Bluefruit52 MicroPython固件安装下载地址 <a href="https://github.com/Afantor/Afantor_Bluefruit52_MicroPython" target="_blank">GitHub</a>.
                                 </p>
                             </div>
                         </div>
