fixed some pictures.

--- a/index.html
+++ b/index.html
@@ -395,10 +395,10 @@
                 </figure>
 
                 <figure class="mix portfolio-item app" style="display: inline-block;">
-                    <img class="img-responsive" src="./img/portfolio/portfolio-2.jpg" alt="Portfolio Item">
-                    <a href="http://www.eezyrobots.it/img/portfolio/portfolio-2a.jpg" title="3D printers calculator on Google Play for free" rel="portfolio" class="fancybox"><span class="plus"></span></a>
+                    <img class="img-responsive" src="./img/portfolio/app_down.jpg" alt="Portfolio Item">
+                    <a href="./img/portfolio/app_down.jpg" title="android bluetooth app on Google Play for free" rel="portfolio" class="fancybox"><span class="plus"></span></a>
                     <figcaption class="mask">
-                        <h3>3D Printer calc</h3>
+                        <h3>Bluefruit APP control</h3>
                         <span>Android APPS</span>
                     </figcaption>
                 </figure>
@@ -512,12 +512,12 @@
                     </figcaption>
                 </figure>
 
-                <figure class="mix portfolio-item print" style="display: inline-block;">
-                    <img class="img-responsive" src="./img/portfolio/portfolio-17.jpg" alt="Portfolio Item">
-                    <a href="./img/portfolio/portfolio-17.jpg" title="3D printing on canvas" rel="portfolio" class="fancybox"><span class="plus"></span></a>
+                <figure class="mix portfolio-item app" style="display: inline-block;">
+                    <img class="img-responsive" src="./img/portfolio/app_neo.jpg" alt="Portfolio Item">
+                    <a href="./img/portfolio/app_neo.jpg" title="App controller to Neopixel" rel="portfolio" class="fancybox"><span class="plus"></span></a>
                     <figcaption class="mask">
-                        <h3>3D printing on canvas</h3>
-                        <span>3D printing</span>
+                        <h3>App controller to Neopixel</h3>
+                        <span>Android APPS</span>
                     </figcaption>
                 </figure>
 
