--- a/nrf52_bluefruit.html
+++ b/nrf52_bluefruit.html
@@ -81,7 +81,7 @@
                           <li><a href="http://www.afantor.cc">主页</a></li>
                           <li class="current"><a href="http://www.afantor.cc/nRF52_bluefruit.html#service">教程</a></li>
                           <li><a href="http://www.afantor.cc/nRF52_bluefruit.html#portfolio">作品</a></li>
-                          <li><a href="http://www.afantor.cc/nRF52_bluefruit.html#service">Arduino</a></li>
+                          <li><a href="./nRF52_bluefruit_Learning_Guide.html">Arduino</a></li>
                           <li><a href="./mpy/html/index.html">MicroPython</a></li>
                           <li><a href="./privacy.html">声明</a></li>   
                           <li><a href="./nrf52_bluefruit_en.html"> <img src="./img/icons/en.png"></a></li>
@@ -292,7 +292,7 @@
                                 <p>Arduino快速搭建支持nRF52832开发环境.<br>
                                 提供nRF52832驱动软件库，完全兼容Arduino的API函数.<br>
                                 详细的API函数说明文档，丰富的使用例程.<br>
-                                配套APP应用软件，快速开发蓝牙通讯控制。<br>
+                                配套APP应用软件，快速开发蓝牙通讯控制。<br><br>
                                 nRF52832 Bluefruit52 Arduino支持软件库安装下载地址 <a href="https://github.com/Afantor/Afantor_Bluefruit52_Arduino" target="_blank">GitHub</a>.
                                 </p>
                             </div>
@@ -308,7 +308,7 @@
                                 <p>nRF52832支持MicroPython固件.<br>
                                    提供MicroPython编辑器，快速编辑程序，上传脚本，运行脚本.<br>
                                    详细的MicroPython使用说明API文档，提供丰富的例程.<br>
-                                   Python编程驱动板载外设，持续更新维护固件。<br>
+                                   Python编程驱动板载外设，持续更新维护固件。<br><br>
                                    nRF52832 Bluefruit52 MicroPython固件安装下载地址 <a href="https://github.com/Afantor/Afantor_Bluefruit52_MicroPython" target="_blank">GitHub</a>.
                                 </p>
                             </div>
