--- a/nrf52_bluefruit_en.html
+++ b/nrf52_bluefruit_en.html
@@ -81,7 +81,7 @@
                           <li><a href="http://www.afantor.cc">HOME</a></li>
                           <li class="current"><a href="http://www.afantor.cc/nRF52_bluefruit_en.html#service">INSTRUCTIONS</a></li>
                           <li><a href="http://www.afantor.cc/nRF52_bluefruit.html#portfolio">MAKES</a></li>
-                          <li><a href="http://www.afantor.cc/nRF52_bluefruit.html#service">Arduino</a></li>
+                          <li><a href="./nRF52_bluefruit_Learning_Guide.html">Arduino</a></li>
                           <li><a href="./mpy/html/index.html">MicroPython</a></li>
                           <li><a href="./privacy.html">Privacy</a></li>   
                           <li><a href="./nrf52_bluefruit_en.html"> <img src="./img/icons/China.png"></a></li>
