--- a/eba_mk2.html
+++ b/eba_mk2.html
@@ -583,6 +583,19 @@
                         </div>
                     </div>
 
+                    <!--  STEP 23  -->          
+                    <div class="col-md-12 col-sm-12 wow fadeInRight" data-wow-delay="0.2s" style="visibility: hidden; animation-delay: 0.2s; animation-name: none;">
+                        <div class="media">
+                            <a href="./eba_mk2.html#" class="pull-left"><br><br>
+                                <img src="./img/eba2/Robot_Arm_Control.gif" alt="step24">
+                            </a>
+                            <div class="media-body">
+                                <h3><br>蓝牙遥感控制</h3>
+                                <p>对机械臂的运动控制进行算法融和后，使用XY蓝牙无线遥感控制.</p>                            
+                            </div>
+                        </div>
+                    </div>
+
                 </div> <!-- end .row -->
             </div> <!-- end .container -->
         </section>
